Avoid deprecated use of Class#newInstance()
Co-authored-by: Moderne <team@moderne.io>